--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <meta name="keywords" content="" />
 
     <!-- Favicons -->
-    <!-- <link href="assets/img/favicon.png" rel="icon" />
-    <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon" /> -->
+<!-- not favicon  -->
+
+
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com" rel="preconnect" />
@@ -50,7 +51,7 @@
         >
           <div class="contact-info d-flex align-items-center">
             <i class="bi bi-envelope d-flex align-items-center"
-              ><a href="mailto:cardiofergana@gmail.com"
+              ><a href="#"
                 >cardiofergana@gmail.com</a
               ></i
             >
